Add media. Deviding to components.

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -1,16 +1,13 @@
-header h1 {
+.header {
+  width: 100vw;
+  display: flex;
+  flex: row;
+  justify-content: space-between;
+  padding: var(--space-48);
+  padding-bottom: 0px;
+  font-size: 16px;
+}
+
+.header h1 {
   font-size: 36px;
-}
-header #hamburger {
-  display: none;
-}
-header #navbar-links {
-  width: 50%;
-  display: flex !important;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
-  height: auto;
-  position: relative;
-  animation: none;
 }
