--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,68 @@
 html {
   scroll-behavior: smooth;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+  -webkit-overflow-scrolling: touch;
+}
+
+body::-webkit-scrollbar {
+  width: 3vw;
+  max-width: 25px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+body::-webkit-scrollbar-track {
+  background: linear-gradient(
+    to bottom,
+    var(--color-6),
+    var(--color-7),
+    var(--color-5)
+  );
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.displayNone {
+  display: none !important;
+}
+
+.fade {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 1.5s, transform 1s;
+}
+.fade.active {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+@keyframes slide-in-top {
+  0% {
+    transform: translateY(-1000px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.contentName {
+  font-size: 36px;
+  margin: var(--space-24);
+  text-align: center;
+}
